# Automotive_System_Management

./: AlertManager.cpp  AlertManager.h  AnalyticsManager.cpp  AnalyticsManager.h  CMakeLists.txt  DTCManager.cpp  DTCManager.h  DatabaseManager.cpp  DatabaseManager.h  README.md  RealTimeMonitor.cpp  RealTimeMonitor.h  ReportGenerator.cpp  ReportGenerator.h  SchemaInitializer.cpp  SchemaInitializer.h  UserManager.cpp  UserManager.h  VehicleManager.cpp  VehicleManager.h  main.cpp
